--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,9 @@
 
 
 
-
+* {
+	outline: none;
+}
 .modal-footer {
 	border-top: 0px;
 }
@@ -84,6 +86,7 @@
 	border:1px solid #cccccc;
 	background-color:#ffffff;
 	color:#000000;
+	box-sizing: border-box;
 }
 .FileUpload {
 	margin: 0 auto;
@@ -111,13 +114,14 @@
 	height:80px;
 }
 .footer {
-	border-top: 1px solid #e5e5e5;
+	/*border-top: 1px solid #e5e5e5;*/
 	color: #ffffff;
 	font-size: 13px;
 	font-weight: normal;
 	margin: 0 0 15px;
 	padding-top: 15px;
 	text-align: center;
+	clear:both;
 }
 .addanexpense p {
 	color: #454545;
@@ -195,7 +199,7 @@
 #mainContainer {
     float: left;
     overflow-x: hidden;
-    padding: 5% 0% 5%;
+    padding: 5% 0% 0;
     width: 100%;
 }
 .selected {
@@ -482,7 +486,7 @@
 	left: 0;
 	background: rgba(0, 0, 0, 0.8);
 	z-index: 99999;
-	opacity: 0;
+	opacity: 1;
 	-webkit-transition: opacity 400ms ease-in;
 	-moz-transition: opacity 400ms ease-in;
 	transition: opacity 400ms ease-in;
@@ -758,3 +762,42 @@ div.image {
     margin-left: 26%;
 	margin-right: 30px;
 }
+.iamherenow, .donefortoday {
+	width: 200px;
+    margin: 0 auto 15px;
+    display: block;
+    padding-top: 13px;
+    padding-bottom: 13px;
+    font-size: 15px;
+    font-weight: bold;
+}
+.donefortoday {background-color: #6f6f6f; border-color: #555;}
+.iamherenow {background-color: #97ca4c; border-color: #79a53a;}
+.actionmherebox{text-align:center; clear:both; position:relative;}
+.actionmherebox #getGPSAdminBtn {position: absolute; right: 25px; width: 35px; height: 35px; top: 0;}
+#spacerexpense {height: 180px; display: none;}
+.expenseform {position: relative;}
+#donefortoday, #iamherenow {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    margin: 0 auto;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 10px;
+    width: 80%;
+    border-radius: 5px;
+    z-index: 2;
+}
+#modalbgbox {background-color: #ccc; opacity: 0.6; position: fixed; top: 0; right: 0; left:0; bottom: 0; width: 100%; height: 100%; z-index: 1;}
+#yesclose, #noclose {margin: 0 15px; border: 1px solid #4cae4c; padding: 6px;}
+#suremodalopen {margin: 25px 0;}
+div[id^=map_canvas], div[id^=map_canvas] {
+    overflow: auto !important;
+    position: static !important;
+}
+#map_wrapper {}
+#backtomain {display: block; z-index: 1; background-color: #01c675; border: 1px solid #0aad6a; font-weight: bold; color: #fff; position: fixed; width: 100%; bottom: 77px; padding: 10px;}
+#expensedatabl {padding: 0 15px;}
